fixing save - ui post request

--- a/Components/Pages/Appointments.razor
+++ b/Components/Pages/Appointments.razor
@@ -56,7 +56,7 @@
         try
         {
             // Fetch list from API
-            appointments = await Http.GetFromJsonAsync<Appointment[]>("/api/Appointments");
+            appointments = await Http.GetFromJsonAsync<Appointment[]>(requestUri: "/api/Appointments");
         }
         catch (Exception ex)
         {
