fixing save - ui post request

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -14,7 +14,10 @@
 </head>
 
 <body>
-    <Routes />
+    @* Enable interactivity for the entire application *@
+    <Routes @renderMode="InteractiveServer" />
+    
+    @* This script is CRITICAL for Interactivity *@
     <script src="_framework/blazor.web.js"></script>
 </body>
 
