500 error so , Revert "fixing save - ui post request"
This reverts commit 2233886a4939ca3e803f55c7c5be46c2e81e59e9.

--- a/Components/App.razor
+++ b/Components/App.razor
@@ -14,10 +14,7 @@
 </head>
 
 <body>
-    @* Enable interactivity for the entire application *@
-    <Routes @renderMode="InteractiveServer" />
-    
-    @* This script is CRITICAL for Interactivity *@
+    <Routes />
     <script src="_framework/blazor.web.js"></script>
 </body>
 
